Fix layout spacing

--- a/www/Content/Css/style.less
+++ b/www/Content/Css/style.less
@@ -8,19 +8,25 @@ body {
     background: #dedede;
 }
 
+form {
+    margin: 0 22px;
+}
 fieldset {
     border: none;
+    margin: 0;
+    padding:5px 0 10px 0;
 }
-
+input[type=submit],
 .boxen label {
     border: 2px solid black;
     padding: 3px;
     opacity: 0.4;
     .colors(#c8c8c8);
-    margin-right: 2px;
-    line-height: 2em;
+    margin-right: 6px;
+    line-height: 2.3em;
 }
 
+input[type=submit]:hover,
     .boxen label:hover {
         border: 2px solid black;
         padding: 3px;
@@ -47,6 +53,7 @@ fieldset {
 
 table {
     border-collapse: collapse;
+    margin-top:20px;
 }
 
 td, th {
@@ -70,6 +77,7 @@ tr:nth-child(odd) {
     height: 25px;
     border: none;
     padding: 0;
+    margin: 5px 0 0 0;
     float: left;
     font-family:consolas, monospace;
     font-size:18px;
@@ -88,5 +96,5 @@ tr:nth-child(odd) {
 
 .Define > div {
     clear: left;
-    padding-top: 10px;
+    padding-top: 5px;
 }
